--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-447.9KB/s(Youtube:不良林), server: cn04.downloadmovie.cn, port: 65036, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn04.downloadmovie.cn}}
-  - {name: 🇯🇵 日本-1.71MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇦 加拿大-670.1KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-898.3KB/s(Youtube:不良林), server: 120.233.150.146, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇯🇵 日本-176.5KB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 波兰-626.3KB/s(Youtube:不良林), server: 217.30.10.67, port: 9026, type: ss, cipher: aes-256-cfb, password: QWDDvVE9npNurQfA}
+  - {name: 🇨🇳 中国-904.1KB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-1.10MB/s(Youtube:不良林), server: 36.134.154.119, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
+  - {name: 🇨🇳 中国-4.53MB/s(Youtube:不良林), server: auto-moble.downloadmovie.cn, port: 65022, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: auto-moble.downloadmovie.cn}}
+  - {name: 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林), server: 141.98.168.251, port: 443, type: trojan, password: LiX1tV, skip-cert-verify: true}
   - {name: 波兰-543.1KB/s(Youtube:不良林), server: 217.30.10.67, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
   - {name: 波兰-657.6KB/s(Youtube:不良林), server: 217.30.10.67, port: 9045, type: ss, cipher: aes-256-cfb, password: Lp27rqyJq72bZsqX}
-  - {name: 波兰-567.4KB/s(Youtube:不良林), server: 217.30.10.67, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
+  - {name: 波兰-671.8KB/s(Youtube:不良林), server: 217.30.10.67, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
   - {name: 🇨🇳 中国-506.9KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65068, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
   - {name: 🇨🇳 中国-1.33MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-447.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.71MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-670.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-898.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-176.5KB/s(Youtube:不良林)
+      - 波兰-626.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-904.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林)
       - 波兰-543.1KB/s(Youtube:不良林)
       - 波兰-657.6KB/s(Youtube:不良林)
-      - 波兰-567.4KB/s(Youtube:不良林)
+      - 波兰-671.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-506.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-447.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.71MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-670.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-898.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-176.5KB/s(Youtube:不良林)
+      - 波兰-626.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-904.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林)
       - 波兰-543.1KB/s(Youtube:不良林)
       - 波兰-657.6KB/s(Youtube:不良林)
-      - 波兰-567.4KB/s(Youtube:不良林)
+      - 波兰-671.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-506.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-447.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.71MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-670.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-898.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-176.5KB/s(Youtube:不良林)
+      - 波兰-626.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-904.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林)
       - 波兰-543.1KB/s(Youtube:不良林)
       - 波兰-657.6KB/s(Youtube:不良林)
-      - 波兰-567.4KB/s(Youtube:不良林)
+      - 波兰-671.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-506.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-447.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.71MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-670.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-898.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-176.5KB/s(Youtube:不良林)
+      - 波兰-626.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-904.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林)
       - 波兰-543.1KB/s(Youtube:不良林)
       - 波兰-657.6KB/s(Youtube:不良林)
-      - 波兰-567.4KB/s(Youtube:不良林)
+      - 波兰-671.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-506.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-447.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.71MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-670.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-898.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-176.5KB/s(Youtube:不良林)
+      - 波兰-626.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-904.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林)
       - 波兰-543.1KB/s(Youtube:不良林)
       - 波兰-657.6KB/s(Youtube:不良林)
-      - 波兰-567.4KB/s(Youtube:不良林)
+      - 波兰-671.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-506.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-447.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.71MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-670.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-898.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-176.5KB/s(Youtube:不良林)
+      - 波兰-626.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-904.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林)
       - 波兰-543.1KB/s(Youtube:不良林)
       - 波兰-657.6KB/s(Youtube:不良林)
-      - 波兰-567.4KB/s(Youtube:不良林)
+      - 波兰-671.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-506.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-447.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.71MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-670.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-898.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-176.5KB/s(Youtube:不良林)
+      - 波兰-626.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-904.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林)
       - 波兰-543.1KB/s(Youtube:不良林)
       - 波兰-657.6KB/s(Youtube:不良林)
-      - 波兰-567.4KB/s(Youtube:不良林)
+      - 波兰-671.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-506.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
 rules:
