--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 波兰-626.3KB/s(Youtube:不良林), server: 217.30.10.67, port: 9026, type: ss, cipher: aes-256-cfb, password: QWDDvVE9npNurQfA}
-  - {name: 🇨🇳 中国-904.1KB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-1.10MB/s(Youtube:不良林), server: 36.134.154.119, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
-  - {name: 🇨🇳 中国-4.53MB/s(Youtube:不良林), server: auto-moble.downloadmovie.cn, port: 65022, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: auto-moble.downloadmovie.cn}}
-  - {name: 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林), server: 141.98.168.251, port: 443, type: trojan, password: LiX1tV, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.83MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇨🇦 加拿大-660.8KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇭🇰 (已存活7天)香港-1.73MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇯🇵 日本-176.5KB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇫🇷 法国-606.4KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 波兰-543.1KB/s(Youtube:不良林), server: 217.30.10.67, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
   - {name: 波兰-657.6KB/s(Youtube:不良林), server: 217.30.10.67, port: 9045, type: ss, cipher: aes-256-cfb, password: Lp27rqyJq72bZsqX}
   - {name: 波兰-671.8KB/s(Youtube:不良林), server: 217.30.10.67, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-626.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-904.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-660.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-1.73MB/s(Youtube:不良林)
+      - 🇯🇵 日本-176.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-606.4KB/s(Youtube:不良林)
       - 波兰-543.1KB/s(Youtube:不良林)
       - 波兰-657.6KB/s(Youtube:不良林)
       - 波兰-671.8KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 波兰-626.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-904.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-660.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-1.73MB/s(Youtube:不良林)
+      - 🇯🇵 日本-176.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-606.4KB/s(Youtube:不良林)
       - 波兰-543.1KB/s(Youtube:不良林)
       - 波兰-657.6KB/s(Youtube:不良林)
       - 波兰-671.8KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-626.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-904.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-660.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-1.73MB/s(Youtube:不良林)
+      - 🇯🇵 日本-176.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-606.4KB/s(Youtube:不良林)
       - 波兰-543.1KB/s(Youtube:不良林)
       - 波兰-657.6KB/s(Youtube:不良林)
       - 波兰-671.8KB/s(Youtube:不良林)
@@ -66,17 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活7天)香港-1.73MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 波兰-626.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-904.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-660.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-1.73MB/s(Youtube:不良林)
+      - 🇯🇵 日本-176.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-606.4KB/s(Youtube:不良林)
       - 波兰-543.1KB/s(Youtube:不良林)
       - 波兰-657.6KB/s(Youtube:不良林)
       - 波兰-671.8KB/s(Youtube:不良林)
@@ -87,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 波兰-626.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-904.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-660.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-1.73MB/s(Youtube:不良林)
+      - 🇯🇵 日本-176.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-606.4KB/s(Youtube:不良林)
       - 波兰-543.1KB/s(Youtube:不良林)
       - 波兰-657.6KB/s(Youtube:不良林)
       - 波兰-671.8KB/s(Youtube:不良林)
@@ -103,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-626.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-904.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-660.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-1.73MB/s(Youtube:不良林)
+      - 🇯🇵 日本-176.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-606.4KB/s(Youtube:不良林)
       - 波兰-543.1KB/s(Youtube:不良林)
       - 波兰-657.6KB/s(Youtube:不良林)
       - 波兰-671.8KB/s(Youtube:不良林)
@@ -128,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-626.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-904.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-660.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-1.73MB/s(Youtube:不良林)
+      - 🇯🇵 日本-176.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-606.4KB/s(Youtube:不良林)
       - 波兰-543.1KB/s(Youtube:不良林)
       - 波兰-657.6KB/s(Youtube:不良林)
       - 波兰-671.8KB/s(Youtube:不良林)
