--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.83MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇨🇦 加拿大-660.8KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇭🇰 (已存活7天)香港-1.73MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇯🇵 日本-176.5KB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇫🇷 法国-606.4KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇳 中国-499.9KB/s(Youtube:不良林), server: 111.45.22.136, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇸🇬 新加坡-533.0KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-318.2KB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
   - {name: 波兰-543.1KB/s(Youtube:不良林), server: 217.30.10.67, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 波兰-657.6KB/s(Youtube:不良林), server: 217.30.10.67, port: 9045, type: ss, cipher: aes-256-cfb, password: Lp27rqyJq72bZsqX}
-  - {name: 波兰-671.8KB/s(Youtube:不良林), server: 217.30.10.67, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
-  - {name: 🇨🇳 中国-506.9KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65068, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-1.33MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-896.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-483.0KB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇫🇷 法国-875.2KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-1.19MB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-682.2KB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-2.34MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-660.8KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活7天)香港-1.73MB/s(Youtube:不良林)
-      - 🇯🇵 日本-176.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-606.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-499.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-533.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-318.2KB/s(Youtube:不良林)
       - 波兰-543.1KB/s(Youtube:不良林)
-      - 波兰-657.6KB/s(Youtube:不良林)
-      - 波兰-671.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-896.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-483.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-875.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-682.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-660.8KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活7天)香港-1.73MB/s(Youtube:不良林)
-      - 🇯🇵 日本-176.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-606.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-499.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-533.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-318.2KB/s(Youtube:不良林)
       - 波兰-543.1KB/s(Youtube:不良林)
-      - 波兰-657.6KB/s(Youtube:不良林)
-      - 波兰-671.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-896.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-483.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-875.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-682.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-660.8KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活7天)香港-1.73MB/s(Youtube:不良林)
-      - 🇯🇵 日本-176.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-606.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-499.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-533.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-318.2KB/s(Youtube:不良林)
       - 波兰-543.1KB/s(Youtube:不良林)
-      - 波兰-657.6KB/s(Youtube:不良林)
-      - 波兰-671.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-896.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-483.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-875.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-682.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活7天)香港-1.73MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-660.8KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活7天)香港-1.73MB/s(Youtube:不良林)
-      - 🇯🇵 日本-176.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-606.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-499.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-533.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-318.2KB/s(Youtube:不良林)
       - 波兰-543.1KB/s(Youtube:不良林)
-      - 波兰-657.6KB/s(Youtube:不良林)
-      - 波兰-671.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-896.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-483.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-875.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-682.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-660.8KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活7天)香港-1.73MB/s(Youtube:不良林)
-      - 🇯🇵 日本-176.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-606.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-499.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-533.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-318.2KB/s(Youtube:不良林)
       - 波兰-543.1KB/s(Youtube:不良林)
-      - 波兰-657.6KB/s(Youtube:不良林)
-      - 波兰-671.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-896.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-483.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-875.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-682.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-660.8KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活7天)香港-1.73MB/s(Youtube:不良林)
-      - 🇯🇵 日本-176.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-606.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-499.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-533.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-318.2KB/s(Youtube:不良林)
       - 波兰-543.1KB/s(Youtube:不良林)
-      - 波兰-657.6KB/s(Youtube:不良林)
-      - 波兰-671.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-896.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-483.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-875.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-682.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-660.8KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活7天)香港-1.73MB/s(Youtube:不良林)
-      - 🇯🇵 日本-176.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-606.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-499.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-533.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-318.2KB/s(Youtube:不良林)
       - 波兰-543.1KB/s(Youtube:不良林)
-      - 波兰-657.6KB/s(Youtube:不良林)
-      - 波兰-671.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-896.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-483.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-875.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-682.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
